--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
             // Set up ADAL
             // https://docs.microsoft.com/en-us/azure/time-series-insights/tutorial-create-tsi-sample-spa#register-the-application-with-azure-ad
             
-            var tsiEnv = '[Enter your TSI environment here, e.g. 585dc9d7-68dc-4b02-8392-802a6be205f4.env.timeseries.azure.com]';
+            var tsiEnv = '36fabea3-e37c-4ab2-8ca6-91c90de17561.env.timeseries.azure.com';
             var authContext = new AuthenticationContext({
-                clientId: '[Enter your client_id here, e.g. g075edef-0efa-453b-997b-de1337c29185]',
-                tenant: '[Enter your tenant here, e.g. contoso.onmicrosoft.com]',
+                clientId: '8dc128c1-276d-4ca8-9b50-ced83edebe59',
+                tenant: 'lukemaxhotmail.onmicrosoft.com',
                 postLogoutRedirectUri: window.location.origin,
                 cacheLocation: 'localStorage'
             });
